--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -2,5 +2,5 @@ main_homepage:
     path:     /
     defaults: { _controller: AppBundle:Default:showMainPage}
 admin_page:
-    path:     /admin
+    path:     /admin/{value}
     defaults: { _controller: AppBundle:AdminPage:showAdminPage}
