--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,23 +1,23 @@
 security:
-    providers:
-        in_memory:
-            memory:
-              users:
-                 admin:
-                  password: AdMin
-                  roles: 'ROLE_ADMIN'
-
-    firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt|error)|css|images|js)/
-            security: false
-        default:
-                    anonymous: ~
-                    http_basic: ~
-    access_control:
-        # require ROLE_ADMIN for /admin*
-        - { path: ^/admin, roles: ROLE_ADMIN }
     encoders:
-            Symfony\Component\Security\Core\User\User: plaintext
-
-
+        FOS\UserBundle\Model\UserInterface: bcrypt
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
+    providers:
+        fos_userbundle:
+            id: fos_user.user_provider.username
+    firewalls:
+        main:
+            pattern: ^/
+            form_login:
+                failure_path: main_homepage
+                provider: fos_userbundle
+                csrf_provider: security.csrf.token_manager # Use form.csrf_provider instead for Symfony <
+            logout:       true
+            anonymous:    true
+    access_control:
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, role: ROLE_ADMIN }
