--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -86,3 +86,11 @@ fos_user:
     registration:
             form:
                 type: app_user_registration
+            confirmation:
+                enabled: true
+                from_email:
+                     address:        admin@koleso.org
+                     sender_name:    itsupportReg
+    from_email:
+            address:        admin@koleso.org
+            sender_name:    itsupportUser
